--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       
         </header>
         <nav style="text-align: center">
-          <h1><a id="name" href="file:///C:/Users/sethk/Downloads/KlusmireResumeD.pdf" style='font-size: 60px;' >Seth Klusmire</a></h1>
+          <h1><a id="name" href="KlusmireResumeD.pdf" style='font-size: 60px;'>Seth Klusmire</a></h1>
         </nav>
 
     <aside>
